kuber-homeworks/1.5/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: nginx
    port: 80
