kuber-homeworks/1.5/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - name: multitool
    port: 80
